<resources>
    <string name="app_name">TesteZupLucas</string>

    <!--Login-->
    <string name="button_login">Login</string>
    <string name="hint_user_login">User</string>
    <string name="hint_pass_login">Password</string>
    <string name="user_input_error">Digite seu email ou CPF</string>
    <string name="password_input_error">A senha deve conter pelo menos uma letra maiúscula, um número e um caracter especial</string>
    <string name="dialog_hi">Olá </string>
    <string name="dialog_welcome_back">Bem vindx de volta!</string>
    <string name="continue_session">Continuar minha sessão</string>
    <string name="another_user">Logar com um usuário diferente</string>

    <!--Home-->
    <string name="name_user">Jose da Silva Teste</string>
    <string name="account">Conta</string>
    <string name="account_number">#### / ##.#######&#8211;#</string>
    <string name="account_balance">Saldo</string>
    <string name="account_balance_value">R$#.###,##</string>
    <string name="recents">Recentes</string>
    <string name="regex_email"><![CDATA[(?:[a-z0-9!#$%&\'*+/=?^_`{|}~-]+(?:\\.[a-z0-9!#$%&\'*+/=?^_`{|}~-]+)*|\"(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21\\x23-\\x5b\\x5d-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])*\")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21-\\x5a\\x53-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])+)\\])]]></string>
    <string name="regex_cpf">[0-9]{3}\\.?[0-9]{3}\\.?[0-9]{3}\\-?[0-9]{2}</string>
    <string name="regex_password">((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#%!*:;?$_\\-.,%]).{4,20})</string>

    <string name="dialog_logout_title">Sair</string>
    <string name="dialog_logout_message">Deseja mesmo encerrar sua sessão?</string>
    <string name="dialog_logout_yes">Encerrar</string>
    <string name="dialog_logout_no">Cancelar</string>


</resources>
