<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/appCompatTextView"
                style="@style/homeHeaderMainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="28dp"
                android:text="@string/name_user"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/operationName"
                style="@style/homeHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/account" />

            <TextView
                android:id="@+id/textView3"
                style="@style/homeHeaderMainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@string/account_number" />

            <TextView
                android:id="@+id/textView4"
                style="@style/homeHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/account_balance" />

            <TextView
                android:id="@+id/textView5"
                style="@style/homeHeaderMainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_balance_value" />
        </LinearLayout>

        <ImageButton
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/logout_icon"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.13" />

</android.support.constraint.ConstraintLayout>