<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/helvetica_neue"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_user_login"
        android:padding="12dp"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_pass_login"
        android:fontFamily="@font/helvetica_neue"
        android:padding="12dp"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="@+id/userInput"
        app:layout_constraintStart_toStartOf="@+id/userInput"
        app:layout_constraintTop_toBottomOf="@+id/userInput" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:background="@drawable/login_button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/helvetica_neue"
            android:onClick="onClickLogin"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />


</android.support.constraint.ConstraintLayout>